libs/@local/hashql/ast/tests/ui/lowering/type-extractor/list-parameter-count-mismatch.jsonc
//@ run: fail
//@ description: Tests List intrinsic with wrong parameter count
[
  "type",
  "EmptyList",
  "List",
  //~^ ERROR `::kernel::type::List` needs 1 parameter, but found 0
  [
    "type",
    "TooManyList",
    "List<Number, String>",
    //~^ ERROR Intrinsic `::kernel::type::List` takes 1 parameter, but found 2
    "_"
  ]
]
